Replace requirements.txt with pyproject.toml

--- a/.github/workflows/pip.yaml
+++ b/.github/workflows/pip.yaml
@@ -18,4 +18,4 @@ jobs:
           cache: pip
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install .
