--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,22 @@
+[build-system]
+requires = ["setuptools>=61", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "stable-diffusion"
+requires-python = ">=3.9"
+dependencies = [
+    "accelerate>=0.21.0",
+    "diffusers>=0.20.0",
+    "safetensors>=0.3.0",
+    "torch>=2.0.0",
+    "transformers>=4.31.0",
+]
+dynamic = ["version"]
+
+[project.scripts]
+stable-diffusion = "main:main"
+
 [tool.isort]
 profile = "black"
 
